--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,10 @@
     --accent-color: #2196F3;
     --hover-accent-color: #188CE8;
 
+    --background-footer-color: #2F303A;
     --btn-filter-color: #F5F4FA;
+
+    --social-icon-color: #AFB1B8;
 }
 
 body {
@@ -60,6 +63,17 @@ address {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 /* header */
@@ -119,7 +133,20 @@ address {
 }
 
 .contact {
+    display: flex;
+    align-items: center;
+
     color: var(--secondary-text-color);
+}
+
+.contact-list-icon {
+    margin-right: 10px;
+
+}
+
+.contact:focus .contact-list-icon,
+.contact:hover .contact-list-icon {
+    fill: var(--accent-color)
 }
 
 .nav-list-link.carent {
@@ -136,12 +163,16 @@ address {
 
 /* --------------hero------------ */
 .hero {
-    background: #2F303A;
+
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url('../images/hero/bg.jpg');
+    background-color: #C4C4C4;
+    background-size: cover;
     padding-top: 200px;
     padding-bottom: 200px;
 }
 
 .hero-title {
+
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
@@ -257,6 +288,17 @@ address {
     margin-top: 30px;
 }
 
+.base-list-icon {
+    display: flex;
+    height: 120px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+
+    background-color: var(--btn-filter-color);
+}
+
+
 .base-list .text {
     line-height: 1.71;
 
@@ -270,6 +312,7 @@ address {
 .team-list .text {
     font-size: 16px;
     line-height: 1.19;
+    margin-bottom: 16px;
 
     text-align: center;
     color: var(--secondary-text-color);
@@ -285,22 +328,98 @@ address {
 .team-card {
     background-color: #fff;
     padding-top: 30px;
+    padding-right: 30px;
     padding-bottom: 30px;
+    padding-left: 30px;
+}
+
+.social-list {
+    justify-content: space-between;
+}
+
+.social-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+
+
+}
+
+.social-list-icon {
+    fill: var(--social-icon-color);
+}
+
+.social-list-link:focus,
+.social-list-link:hover {
+    background-color: var(--accent-color);
+}
+
+.social-list-link:focus .social-list-icon,
+.social-list-link:hover .social-list-icon {
+    fill: var(--text-color-light);
+}
+
+/* ----------clients -----------*/
+.client-list {
+    justify-content: space-between;
+}
+
+.client-list-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 170px;
+    height: 92px;
+
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+}
+
+.client-list-icon {
+    fill: var(--social-icon-color);
+}
+
+.client-list-link:focus,
+.client-list-link:hover {
+    border-color: var(--accent-color);
+}
+
+.client-list-link:focus .client-list-icon,
+.client-list-link:hover .client-list-icon {
+    fill: var(--accent-color);
 }
 
 /* ---------footer--------- */
 .footer {
-    background: #2F303A;
+    background-color: var(--background-footer-color);
     padding-top: 60px;
     padding-bottom: 60px;
+}
 
+.block-2 {
+    /* padding-top: 70px; */
+    /* border: 1px solid #fff; */
+}
+
+.footer .container {
+    display: flex;
+    align-items: baseline;
 }
 
 .footer .logo {
     color: var(--text-color-light);
 }
 
-.footer .list {
+.address {
+    margin-right: 70px;
+}
+
+.address .list {
     display: inline-block;
     margin-top: 20px;
 
@@ -325,6 +444,38 @@ address {
 .footer .contact:hover,
 .footer .contact:focus {
     color: var(--accent-color);
+}
+
+.footer .section-title {
+    text-align: left;
+    font-size: 14px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+
+    color: var(--text-color-light);
+}
+
+.footer .social-list-icon {
+
+    fill: var(--text-color-light);
+}
+
+.footer .social-list-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.footer .social-list-link {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.social-list-link:focus,
+.social-list-link:hover {
+    background-color: var(--accent-color);
+}
+
+.social-list-link:focus .social-list-icon,
+.social-list-link:hover .social-list-icon {
+    fill: var(--text-color-light);
 }
 
 /* ----------portfolio---------- */
@@ -360,6 +511,11 @@ address {
 .btn-filter:focus {
     background-color: var(--accent-color);
     color: var(--text-color-light);
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .portfolio-list {
@@ -374,6 +530,13 @@ address {
     margin-left: 30px;
     margin-top: 30px;
 
+}
+
+.portfolio-list-item:hover,
+.portfolio-list-item:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio-title {
